--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,36 +1,35 @@
 body {
-  text-align: center;
   font-family: Helvetica;
+}
+h1, h2, h3 {
+  font-weight: bold;
+  text-align: center;
 }
 h1 {
   font-size: 70px;
-  font-weight: bold;
-  color: white;
 }
 nav {
   font-size: 18px;
-  color: white;
 }
 h2 {
   font-size: 32px;
-  font-weight: bold;
 }
 h3 {
   font-size: 23px;
-  font-weight: bold;
 }
 p {
   font-size: 14px;
-}
-.NY {
-  color: white;
-  background-image: image(resources/images/the-flatiron-building.png);
 }
 .footer {
   font-size: 11px;
   color: white;
   background-color: dimgray;
+  text-align: left;
 }
-.header {
-  background-image: image(resources/images/the-flatiron-building.png);
+.hero {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  color: white;
+}
+.supporting {
+  text-align: center;
 }
