--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,20 +1,20 @@
 body {
-  font-family: Helvetica;
+  font-family: "Helvetica", sans-serif;
 }
 h1, h2, h3 {
   font-weight: bold;
   text-align: center;
 }
-h1 {
+.hero h1 {
   font-size: 70px;
 }
 nav {
   font-size: 18px;
 }
-h2 {
+.supporting h2 {
   font-size: 32px;
 }
-h3 {
+.supporting h3 {
   font-size: 23px;
 }
 p {
@@ -27,8 +27,9 @@ p {
   text-align: left;
 }
 .hero {
-  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png');
   color: white;
+  text-align: center;
 }
 .supporting {
   text-align: center;
